# GenAI_group_work

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
data/: claims.csv
utils/: llm_service.py  prompts.py  workflow.py
utils/agents/: 01_search_agent.py  report_csv_parser.py  workflow_models.py
utils/agents/A_websearch_agent/: search_agent.py  websearch_service.py
utils/agents/B_facts_agent/: facts_agent.py  facts_service.py
utils/agents/B_facts_agent.py/: facts_model.py  facts_service.py
utils/agents/C_source_classifier/: source_class_agent.py  source_class_service.py
utils/agents/D_report_agent/: report_agent.py  report_service.py
utils/rag/: main_qdrant_upsert.py  qdrant_service.py  rag_agent.py  rag_report_generator.py
